# class09_bootcamp

./: README.md  etl.py  exemplo_00.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml  utils_log.py
